fix and shorten softshell tables

--- a/inst/scripts/51_bycatch.qmd
+++ b/inst/scripts/51_bycatch.qmd
@@ -18,7 +18,7 @@ format:
   docx: default 
 ---
 
-** Copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) and Quarto from run from there **  
+<!-- Copy this file to a work directory (e.g., bio.data/bio.snowcrab/reports/) and run Quarto from there (quarto render 51_bycatch.qmd --to html) -->
 
 # Approach: estimate bycatch from at seas observed data and project onto marfis data
 
@@ -28,33 +28,24 @@ First set up environment. Can be made more efficient by doing intermediate saves
 ```{r}
 #| eval: true
 #| output: false
-
-    # Get data and format based upon parameters:
-    year.assessment = 2023
-    p = bio.snowcrab::load.environment( year.assessment=year.assessment )
-      # loadfunctions( "aegis")
-    # loadfunctions( "bio.snowcrab")  # in case of local edits
-
-    # require(ggplot2)
-    # require(data.table)
- 
-    require(gt)  # table formatting
-
-    bycatch_dir = file.path( p$annual.results, "bycatch")
-    
-    years = as.character(1996: year.assessment)
-    
-    # Prepare at sea observed data ... done one the fly but to access directly:
-    # obs = observer.db( DS="bycatch_clean_data", p=p,  yrs=p$yrs )  
-
-
+year.assessment = 2023
+p = bio.snowcrab::load.environment( year.assessment=year.assessment )
+require(gt)  # table formatting
+require(ggplot2)
+bycatch_dir = file.path( p$annual.results, "bycatch")
+years = as.character(1996: year.assessment)
+if (0) {
+  loadfunctions( "aegis")
+  loadfunctions( "bio.snowcrab")  # in case of local edits
+  require(data.table)
+  obs = observer.db( DS="bycatch_clean_data", p=p,  yrs=p$yrs )  # At sea observed data is created on the fly, to access it directly 
+}
 ```
-
 
 
 ## Naive estimation: directly from observations
 
-We estimate bycatch using at-sea-observed catch rate estimates and re-scaling these naively to total snow crab fishery effort: 
+We estimate bycatch using at-sea-observed effort and catch and re-scaling these naively to total snow crab fishery effort associated with the observations by year: 
 
 ### All Maritimes
 
@@ -63,72 +54,82 @@ We estimate bycatch using at-sea-observed catch rate estimates and re-scaling th
 #| output: false
 #| warning: false
 #| error: false 
-  region="cfaall"
-  o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+region="cfaall"
+o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table[ o$bycatch_table==0 ] = "."
+o$bycatch_table[ o$bycatch_table=="NaN" ] = "."
+o$bycatch_table[ is.na(o$bycatch_table) ] = "."
+
 ```
 
-Compare discard rates Maritimes:
+#### Discard rates of snow crab, by weight
 
 ```{r}
+#| label: figure-discard_maritimes
+#| fig-cap: "At sea observed rate of snow crab discards relative to total catch (discard + kept), all Maritimes."
 #| fig-dpi: 144
 #| fig-height: 4
-  pl = ggplot( o$eff_summ, aes(x=fishyr, y=loss, ymin=loss-losssd, ymax=loss+losssd) ) +
+  pl = ggplot( o$eff_summ, aes(x=fishyr, y=discard_rate, ymin=discard_rate-discard_rate_sd, ymax=discard_rate+discard_rate_sd) ) +
     geom_pointrange()  + # Vertical line with point in the middle
     geom_errorbar(width = 0.1, col="brown") + # Standard error bars
     geom_point(size = 1.5, col="darkred") +
     labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
   (pl)
-  # dev.off()
 ``` 
 
-Compare catch rates Maritimes:
+#### Bycatch catch rates
 
 ```{r}
+#| label: bycatch_rates_all
+#| tbl-cap: "At sea observed bycatch rates in Maritimes"
 #| fig-dpi: 144
 #| fig-height: 15
-  # dev.new(width=10, height=length(o$spec)/2 )  
   plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
   text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
   text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.9 )
-  # dev.off()
 ```
 
-Bycatch table Martimes
+#### Bycatch table
 
 ```{r}
 #| label: bycatch_all
-#| tbl-cap: "Bycatch Maritimes"
-tbl <- 
-  o$bycatch_table |> 
-  gt::gt()
-tbl |> 
+#| tbl-cap: "At sea observed bycatch estimates based upon effort rescaling of Maritimes Region snow crab fishery."
+gt::gt(o$bycatch_table) |> 
   gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
     summary_row.padding = gt::px(1), grand_summary_row.padding = gt::px(1), 
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
-  # write.csv( o$bycatch_table, file="tmp.csv")  # if you need to save it
 ```
+
+#### Entanglements of large megafauna 
 
 ```{r}
 #| warning: false
 #| error: false 
 #| tbl-cap: "Entanglements Maritimes"
 #| label: bycatch_entanglements_all
+oss = o$oss  # subset for region of interest
+whales = oss[ grep("whale", common, ignore.case=TRUE), ]
+print(whales[, .N, by=.(yr)] )
+leatherback = oss[ grep("LEATHERBACK", common, ignore.case=TRUE), ]
+print(leatherback[, .N, by=.(yr)])
+basking_shark = oss[ grep("BASKING SHARK",  common, ignore.case=TRUE), ]
+print(basking_shark[, .N, by=.(yr)])
+```
+
+Map of locations of entanglements:
+
+```{r}
+#| warning: false
+#| error: false 
+#| fig-cap: "Entanglemen locations in Maritimes "
+#| label: bycatch_entanglements_map_all
 #| fig-dpi: 144
 #| fig-height: 5
-  # get large megafauna:
-  oss = o$oss  # subset for region of interest
-  whales = oss[ grep("whale", common, ignore.case=TRUE), ]
-  print(whales[, .N, by=.(yr)] )
-  leatherback = oss[ grep("LEATHERBACK", common, ignore.case=TRUE), ]
-  print(leatherback[, .N, by=.(yr)])
-  basking_shark = oss[ grep("BASKING SHARK",  common, ignore.case=TRUE), ]
-  print(basking_shark[, .N, by=.(yr)])
-  plot(lat~-lon, oss, pch=".", col="lightgray", xlim=c(-65.2, -57), ylim=c(42.9,47) )
-  points(lat~-lon, whales, pch=19, cex=1.5, col="darkred" )
-  points(lat~-lon, leatherback, pch=18, cex=1.5, col="darkgreen" )
-  points(lat~-lon, basking_shark, pch=17, cex=1.5, col="slateblue" )
-
+plot(lat~-lon, oss, pch=".", col="lightgray", xlim=c(-65.2, -57), ylim=c(42.9,47) )
+points(lat~-lon, whales, pch=19, cex=1.5, col="darkred" )
+points(lat~-lon, leatherback, pch=18, cex=1.5, col="darkgreen" )
+points(lat~-lon, basking_shark, pch=17, cex=1.5, col="slateblue" )
 ```
 
 
@@ -139,65 +140,67 @@ tbl |>
 #| output: false
 #| warning: false
 #| error: false 
-  region="cfanorth"
-  o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+region="cfanorth"
+o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table[ o$bycatch_table==0 ] = "."
+o$bycatch_table[ o$bycatch_table=="NaN" ] = "."
+o$bycatch_table[ is.na(o$bycatch_table) ] = "."
+
 ```
 
-Compare discard rates NENS:
+#### Discard rates of snow crab, by weight
 
 ```{r}
+#| label: figure-discard_nens
+#| fig-cap: "At sea observed rate of snow crab discards relative to total catch (discard + kept), NENS."
 #| fig-dpi: 144
 #| fig-height: 4
-  pl = ggplot( o$eff_summ, aes(x=fishyr, y=loss, ymin=loss-losssd, ymax=loss+losssd) ) +
-    geom_pointrange()  + # Vertical line with point in the middle
-    geom_errorbar(width = 0.1, col="brown") + # Standard error bars
-    geom_point(size = 1.5, col="darkred") +
-    labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
-  (pl)
-  # dev.off()
+pl = ggplot( o$eff_summ, aes(x=fishyr, y=discard_rate, ymin=discard_rate-discard_rate_sd, ymax=discard_rate+discard_rate_sd) ) +
+  geom_pointrange()  + # Vertical line with point in the middle
+  geom_errorbar(width = 0.1, col="brown") + # Standard error bars
+  geom_point(size = 1.5, col="darkred") +
+  labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
+(pl)
 ``` 
 
-Compare catch rates NENS:
+#### Bycatch catch rates
 
 ```{r}
+#| label: bycatch_rates_nens
+#| tbl-cap: "At sea observed bycatch rates in NENS"
 #| fig-dpi: 144
 #| fig-height: 6
-  # dev.new(width=10, height=length(o$spec)/2 )  
-  plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
-  text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
-  text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.9 )
-  # dev.off()
+plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
+text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
+text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.9 )
 ```
 
-Bycatch table NENS
+#### Bycatch table
 
 ```{r}
 #| label: bycatch_NENS
-#| tbl-cap: "Bycatch NENS"
-tbl <- 
-  o$bycatch_table |> 
-  gt::gt()
-tbl |> 
+#| tbl-cap: "At sea observed bycatch estimates based upon effort rescaling of NENS snow crab fishery."
+gt::gt(o$bycatch_table) |> 
   gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
     summary_row.padding = gt::px(1), grand_summary_row.padding = gt::px(1), 
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
-  # write.csv( o$bycatch_table, file="tmp.csv")  # if you need to save it
 ```
+
+#### Entanglements of large megafauna 
 
 ```{r}
 #| warning: false
 #| error: false 
-#| label: entanglements_aNENS
+#| label: bycatch_entanglements_ens
 #| tbl-cap: "Entanglements NENS"
-  # get large megafauna:
-  oss = o$oss  # subset for region of interst
-  whales = oss[ grep("whale", common, ignore.case=TRUE), ]
-  print(whales[, .(yr, lon, lat, uid, est_discard_wt)] )
-  leatherback = oss[ grep("LEATHERBACK", common, ignore.case=TRUE), ]
-  print(leatherback[, .(yr, lon, lat, uid, est_discard_wt)])
-  basking_shark = oss[ grep("BASKING SHARK",  common, ignore.case=TRUE), ]
-  print(basking_shark[, .(yr, lon, lat, uid, est_discard_wt)])
+oss = o$oss  # subset for region of interst
+whales = oss[ grep("whale", common, ignore.case=TRUE), ]
+print(whales[, .(yr, lon, lat, uid, est_discard_wt)] )
+leatherback = oss[ grep("LEATHERBACK", common, ignore.case=TRUE), ]
+print(leatherback[, .(yr, lon, lat, uid, est_discard_wt)])
+basking_shark = oss[ grep("BASKING SHARK",  common, ignore.case=TRUE), ]
+print(basking_shark[, .(yr, lon, lat, uid, est_discard_wt)])
 ```
 
 
@@ -208,51 +211,51 @@ tbl |>
 #| output: false
 #| warning: false
 #| error: false 
-  region="cfasouth"
-  o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+region="cfasouth"
+o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table[ o$bycatch_table==0 ] = "."
+o$bycatch_table[ o$bycatch_table=="NaN" ] = "."
+o$bycatch_table[ is.na(o$bycatch_table) ] = "."
+
 ```
 
-Compare discard rates SENS:
+#### Discard rates of snow crab, by weight
 
 ```{r}
+#| label: figure-discard_sens
+#| fig-cap: "At sea observed rate of snow crab discards relative to total catch (discard + kept), SENS."
 #| fig-dpi: 144
 #| fig-height: 4
-  pl = ggplot( o$eff_summ, aes(x=fishyr, y=loss, ymin=loss-losssd, ymax=loss+losssd) ) +
-    geom_pointrange()  + # Vertical line with point in the middle
-    geom_errorbar(width = 0.1, col="brown") + # Standard error bars
-    geom_point(size = 1.5, col="darkred") +
-    labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
-  (pl)
-  # dev.off()
+pl = ggplot( o$eff_summ, aes(x=fishyr, y=discard_rate, ymin=discard_rate-discard_rate_sd, ymax=discard_rate+discard_rate_sd) ) +
+  geom_pointrange()  + # Vertical line with point in the middle
+  geom_errorbar(width = 0.1, col="brown") + # Standard error bars
+  geom_point(size = 1.5, col="darkred") +
+  labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
+(pl)
 ``` 
 
-Compare catch rates SENS:
+#### Bycatch catch rates
 
 ```{r}
+#| label: bycatch_rates_sens
+#| tbl-cap: "At sea observed bycatch rates in SENS"
 #| fig-dpi: 144
 #| fig-height: 14
-  # dev.new(width=10, height=length(o$spec)/2 )  
-  plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
-  text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
-  text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.8 )
-  # dev.off()
+plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
+text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
+text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.8 )
 ```
 
-Bycatch table SENS
+#### Bycatch table
 
 ```{r}
 #| label: bycatch_SENS
-#| tbl-cap: "Bycatch SENS"
-tbl <- 
-  o$bycatch_table |> 
-  gt::gt()
-tbl |> 
+#| tbl-cap: "At sea observed bycatch estimates based upon effort rescaling of SENS snow crab fishery."
+gt::gt( o$bycatch_table ) |> 
   gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
     summary_row.padding = gt::px(1), grand_summary_row.padding = gt::px(1), 
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
-
-  # write.csv( o$bycatch_table, file="tmp.csv")  # if you need to save it
 ```
 
 ```{r}
@@ -280,67 +283,68 @@ tbl |>
 #| output: false
 #| warning: false
 #| error: false 
-  region="cfa4x"
-  o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+region="cfa4x"
+o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
+o$bycatch_table[ o$bycatch_table==0 ] = "."
+o$bycatch_table[ o$bycatch_table=="NaN" ] = "."
+o$bycatch_table[ is.na(o$bycatch_table) ] = "."
+
 ```
 
-Compare discard rates 4X:
+#### Discard rates of snow crab, by weight
 
 ```{r}
+#| label: figure-discard_4x
+#| fig-cap: "At sea observed rate of snow crab discards relative to total catch (discard + kept), 4X."
 #| fig-dpi: 144
 #| fig-height: 4
-  pl = ggplot( o$eff_summ, aes(x=fishyr, y=loss, ymin=loss-losssd, ymax=loss+losssd) ) +
-    geom_pointrange()  + # Vertical line with point in the middle
-    geom_errorbar(width = 0.1, col="brown") + # Standard error bars
-    geom_point(size = 1.5, col="darkred") +
-    labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
-  (pl)
-  # dev.off()
+pl = ggplot( o$eff_summ, aes(x=fishyr, y=discard_rate, ymin=discard_rate-discard_rate_sd, ymax=discard_rate+discard_rate_sd) ) +
+  geom_pointrange()  + # Vertical line with point in the middle
+  geom_errorbar(width = 0.1, col="brown") + # Standard error bars
+  geom_point(size = 1.5, col="darkred") +
+  labs(x="Year", y="Discard rate of snow crab (At sea observed, by weight)" )
+(pl)
 ``` 
 
-Compare catch rates 4X:
+
+#### Bycatch catch rates
 
 ```{r}
+#| label: bycatch_rates_4x
+#| tbl-cap: "At sea observed bycatch rates in 4X"
 #| fig-dpi: 144
 #| fig-height: 6
-  # dev.new(width=10, height=length(o$spec)/2 )  
-  plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
-  text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
-  text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.9 )
-  # dev.off()
+plot( o$spec ~ o$bct, xlab = "At sea observed catch rate in snow crab fishery (kg/trap)", ylab="Species", type="p", cex=1.1, pch=19, col="darkorange", xlim=c(0, max(o$bct, na.rm=TRUE)*1.4), yaxt="n" )  
+text( o$bct, o$spec,  labels=o$species, pos=4, srt=0 , cex=0.8, col="darkslateblue")
+text( max(o$bct, na.rm=TRUE)*0.88, 2.5, labels=paste( "Snow crab CPUE (At sea obs., mean): ", o$bct_sc, " kg/trap"), col="darkred", cex=0.9 )
 ```
 
-Bycatch table 4X
+#### Bycatch table
 
 ```{r}
 #| label: bycatch_4X
-#| tbl-cap: "Bycatch 4X"
-tbl <- 
-  o$bycatch_table |> 
-  gt::gt()
-tbl |> 
+#| tbl-cap: "At sea observed bycatch estimates based upon effort rescaling of 4X snow crab fishery."
+gt::gt(o$bycatch_table) |> 
   gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
     summary_row.padding = gt::px(1), grand_summary_row.padding = gt::px(1), 
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
+ ```
 
-  # write.csv( o$bycatch_table, file="tmp.csv")  # if you need to save it
-```
+#### Entanglements of large megafauna 
 
 ```{r}
 #| warning: false
 #| error: false 
-#| label: entanglements_4X
+#| label: bycatch_entanglements_e4x
 #| tbl-cap: "Entanglements 4X"
-  # get large megafauna:
-  oss = o$oss  # subset for region of interst
-  whales = oss[ grep("whale", common, ignore.case=TRUE), ]
-  print(whales[, .(yr, lon, lat, uid, est_discard_wt)] )
-  leatherback = oss[ grep("LEATHERBACK", common, ignore.case=TRUE), ]
-  print(leatherback[, .(yr, lon, lat, uid, est_discard_wt)])
-  basking_shark = oss[ grep("BASKING SHARK",  common, ignore.case=TRUE), ]
-  print(basking_shark[, .(yr, lon, lat, uid, est_discard_wt)])
-
+oss = o$oss  # subset for region of interst
+whales = oss[ grep("whale", common, ignore.case=TRUE), ]
+print(whales[, .(yr, lon, lat, uid, est_discard_wt)] )
+leatherback = oss[ grep("LEATHERBACK", common, ignore.case=TRUE), ]
+print(leatherback[, .(yr, lon, lat, uid, est_discard_wt)])
+basking_shark = oss[ grep("BASKING SHARK",  common, ignore.case=TRUE), ]
+print(basking_shark[, .(yr, lon, lat, uid, est_discard_wt)])
 ```
 
 
@@ -351,4 +355,4 @@ Estimate via carstm: requires a Poisson model of each species of catch (number) 
  
 
 
---- END ---
+## END 
